--- a/package.json
+++ b/package.json
@@ -7,21 +7,23 @@
   },
   "version": "0.1.0",
   "description": "React useEffect hook",
-  "homepage": "https://henryfeesler.com/netology/08/react-hooks-useeffect",
+  "homepage": "https://henryfeesler.com/projects/netology/08/react-hooks-useeffect",
   "private": true,
+  "type": "module",
   "dependencies": {
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^14.2.1",
+    "@testing-library/jest-dom": "^6.4.5",
+    "@testing-library/react": "^14.3.1",
     "@testing-library/user-event": "^14.5.2",
     "classnames": "^2.5.1",
     "prop-types": "^15.8.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
     "react-scripts": "^5.0.1",
     "web-vitals": "^3.5.2"
   },
   "scripts": {
     "start": "react-scripts start",
+    "deploy": "node ./scripts/deploy.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -43,5 +45,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@jezvejs/release-tools": "^0.5.1",
+    "dotenv": "^16.4.5"
   }
 }
